--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/**/*.html --open --port 8000"
+    "start": "parcel src/**/*.html --open src/LandingPage/index.html --port 8000"
   },
   "keywords": [],
   "author": "",
