Add AI to ChefClaude and add SoundPads folder

--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.54.0",
+    "@huggingface/inference": "^4.0.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^4.0.1"
   },
+  
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.15.2"
   }
 }
