--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.54.0",
     "@huggingface/inference": "^4.0.4",
+    "nanoid": "^5.1.5",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^8.0.7",
-    "remark-gfm": "^4.0.1"
+    "react-markdown": "^8.0.7"
   },
-  
   "devDependencies": {
     "buffer": "^6.0.3",
     "parcel": "^2.15.2"
